re-enabled tests step, altered test

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t kp27docker/react-test-up -f ./client/Dockerfile.dev ./client
-      #- run: docker run -e CI=true kp27docker/react-test-up npm test
+      - run: docker run -e CI=true kp27docker/react-test-up npm test
 
       - run: docker build -t kp27docker/multi-client-up ./client
       - run: docker build -t kp27docker/multi-nginx-up ./nginx
