Ready to AWS deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,5 @@
 name: Deploy MultiDocker
 on:
-  workflow_dispatch:
   push:
     branches:
       - master # check your repo, your default branch might be master!
@@ -11,15 +10,31 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t kp27docker/react-test-up -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true kp27docker/react-test-up npm test
+      - run: docker build -t kp27docker/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true kp27docker/react-test npm test
 
-      - run: docker build -t kp27docker/multi-client-up ./client
-      - run: docker build -t kp27docker/multi-nginx-up ./nginx
-      - run: docker build -t kp27docker/multi-server-up ./server
-      - run: docker build -t kp27docker/multi-worker-up ./worker
+      - run: docker build -t kp27docker/multi-client ./client
+      - run: docker build -t kp27docker/multi-nginx ./nginx
+      - run: docker build -t kp27docker/multi-server ./server
+      - run: docker build -t kp27docker/multi-worker ./worker
 
-      - run: docker push kp27docker/multi-client-up
-      - run: docker push kp27docker/multi-nginx-up
-      - run: docker push kp27docker/multi-server-up
-      - run: docker push kp27docker/multi-worker-up
+      - run: docker push kp27docker/multi-client
+      - run: docker push kp27docker/multi-nginx
+      - run: docker push kp27docker/multi-server
+      - run: docker push kp27docker/multi-worker
+
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v18
+        with:
+          aws_access_key: ${{ secrets.AWS_BS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_BS_SECRET_KEY }}
+          application_name: multi-docker
+          environment_name: Multi-docker-env
+          existing_bucket_name: elasticbeanstalk-eu-north-1-147704599131
+          region: eu-north-1
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
+          use_existing_version_if_available: true
